[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywavescope"
version = "0.1.0"
description = "HDL waveform analysis toolkit for WLF simulation outputs"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["pywavescope"]
